--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://maitencullen.github.io/portfolio/",
-  "name": "portfolio",
+  "name": "portfolio project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
