--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -2,9 +2,9 @@ name: NodeJS with Webpack
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "newBranch" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "newBranch" ]
 
 jobs:
   build:
