--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "https://maitencullen.github.io/portfolio/",
-  "name": "portfolio project",
-  "private": true,
+  "name": "portfolio",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
